# Roboblade

./: AppMenuBar.qml  AppStyle.qml  CMakeLists.txt  CMakeLists.txt.user.a1e8a6e  Logger.qml  README.md  Roboblade.pro  components.qrc  fonts.qrc  icons.qrc  main.cpp  main.qml  modules.qrc  qml.qrc  socket.cpp  socket.h  sockethou.cpp  sockethou.h  sockethoudini.cpp  sockethoudini.h  socketmodbustcp.cpp  socketmodbustcp.h  socketrdt.cpp  socketrdt.h  socketrsi.cpp  socketrsi.h  widgets.qrc
Modules/AppStyles/: Styles.qml  qmldir
Modules/Components/: AppButton.qml  AppComboBox.qml  AppFileUpload.qml  AppFormComponent.qml  AppIcon.qml  AppPopup.qml  AppSwitch.qml  AppTabButton.qml  AppTextField.qml  AppToolButton.qml  NavigationMenu.qml  NavigationMenuDelegate.qml  qmldir
Modules/Properties/: BorderProperty.qml  ColorProperty.qml  GeometryProperty.qml  LineProperty.qml  PropertiesSection.qml  TextProperty.qml  qmldir
Modules/Widgets/: DashboardWidget.qml  GaugeWidget.qml  LineChartWidget.qml  NumericWidget.qml  qmldir
_old/: Field.qml  FieldGroup.qml  MainMenuBar.qml
_old/Components_old/: AppButton.qml  AppComboBox.qml  AppFieldCheck.qml  AppFieldFile.qml  AppFieldText.qml  AppFormComponent.qml  AppScrollBar.qml  AppTabButton.qml  qmldir
_old/dashboard_old/: DrawerTabButton.qml
_old/network_old/: NetworkView.qml  SocketControls.qml
_old/settings_old/: FieldGroupKRC.qml  NetworkSettingsWindow.qml  SettingsViewTabButton.qml
backend/: CMakeLists.txt
frontend/: CMakeLists.txt
frontend/my_qml/Components/: LinearGradientModel.qml
frontend/my_qml/Styles/: Styles.qml
frontend/my_qml/Widgets/: LineChartWidget.qml
frontend/qml/: Main.qml
frontend/qml/Components/: AppComboBox.qml
frontend/qml/Widgets/: NumericWidget.qml
menu/: AppMenu.qml  AppMenuBar.qml
navigation/: Logo.qml  NavigationMenu.qml  NavigationMenuDelegate.qml  NavigationPanel.qml
qml/: CMakeLists.txt  Main.qml
qml/Components/: AppButton.qml  AppFormComponent.qml  AppIcon.qml  AppMenu.qml  AppPopup.qml  AppSwitch.qml  AppToolButton.qml  CMakeLists.txt
qml/Menu/: AppMenu.qml
qml/Modules/: CMakeLists.txt
qml/Modules/Components/: AppRectangle.qml  AppTextField.qml  CMakeLists.txt
qml/Modules/Styles/: CMakeLists.txt  MyStyles.qml
qml/Modules/Widgets/: CMakeLists.txt
qml/Navigation/: Logo.qml  NavigationMenu.qml  NavigationMenuDelegate.qml
qml/Properties/: ColorProperty.qml
qml/Views/Dashboard/: DashboardScene.qml
qml/Views/Network/: Network.qml
qml/Views/Settings/: SettingsNetworkTab.qml  SettingsSection.qml
qml/Views/dashboard/: Dashboard.qml
qml/Views/dashboard/sidePanel/: DashboardSidePanel.qml  SubsTab.qml
qml/Views/dashboard/sidePanel/subsDrawer/: SubsDrawer.qml  SubsTableCheckDelegate.qml  SubsTableItemDelegate.qml
qml/Views/network/: NetworkTable.qml
qml/Views/scene/: Scene.qml
qml/Views/settings/: SettingsDashboardTab.qml  SettingsView.qml
qml/Widgets/: widgetFactory.js
qml/my_qml/Properties/: PropertiesSection.qml
qml_lib/: CMakeLists.txt
qml_lib/Components/: AppFileUpload.qml  AppMenuBar.qml
qml_lib/Properties/: BorderProperty.qml  GeometryProperty.qml
src/: CMakeLists.txt  icons.qrc  logger.h  main.cpp  socket.cpp  socket.h  sockethou.cpp  sockethou.h  socketmodbustcp.cpp  socketmodbustcp.h  socketrdt.cpp  socketrdt.h  socketrsi.cpp  socketrsi.h
src/qml/: CMakeLists.txt  Logger.qml  Main.qml
src/qml/Menu/: AppMenuBar.qml
src/qml/Modules/Components/: AppButton.qml  AppRectangle.qml  CMakeLists.txt  QxButton.qml  QxComboBox.qml  QxFileUpload.qml  QxFormComponent.qml  QxIcon.qml  QxLinearGradientModel.qml  QxMenu.qml  QxMenuBar.qml  QxNavigationMenu.qml  QxNavigationMenuDelegate.qml  QxPopup.qml  QxSwitch.qml  QxTabButton.qml  QxTextField.qml  QxToolButton.qml  qmldir
src/qml/Modules/Properties/: BorderProperty.qml  ColorProperty.qml  GeometryProperty.qml  LineProperty.qml  PropertiesSection.qml  TextProperty.qml  qmldir
src/qml/Modules/Styles/: CMakeLists.txt  Styles.qml  qmldir
src/qml/Modules/Widgets/: DashboardWidget.qml  GaugeWidget.qml  LineChartWidget.qml  NumericWidget.qml  qmldir
src/qml/Navigation/: Logo.qml  NavigationMenu.qml  NavigationMenuDelegate.qml  NavigationPanel.qml
src/qml/Views/Dashboard/: Dashboard.qml  DashboardScene.qml  DashboardToolBar.qml
src/qml/Views/Dashboard/SidePanel/: BasePropsModel.qml  DashboardSidePanel.qml  PropsTab.qml  SubsTab.qml
src/qml/Views/Dashboard/SidePanel/SubsDrawer/: SubsDrawer.qml  SubsTable.qml  SubsTableCheckDelegate.qml  SubsTableHeaderDelegate.qml  SubsTableItemDelegate.qml
src/qml/Views/Network/: Network.qml  NetworkTable.qml  NetworkTableItemDelegate.qml
views/dashboard/: Dashboard.qml  DashboardScene.qml  DashboardToolBar.qml
views/dashboard/sidePanel/: BasePropsModel.qml  DashboardSidePanel.qml  PropsTab.qml  SubsTab.qml
views/dashboard/sidePanel/subsDrawer/: SubsDrawer.qml  SubsTable.qml  SubsTableCheckDelegate.qml  SubsTableHeaderDelegate.qml  SubsTableItemDelegate.qml
views/dashboard/subsDrawer/: SubsDrawer.qml  SubsTable.qml  SubsTableItemDelegate.qml
views/network/: Network.qml  Network.qml.autosave  NetworkSocketTab.qml  NetworkTable.qml  NetworkTable.qml.autosave  NetworkTableItemDelegate.qml
views/scene/: Scene.qml
views/settings/: SettingsDashboardTab.qml  SettingsNetworkTab.qml  SettingsSection.qml  SettingsView.qml
